--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
-name: Sample travis ci
+name: sample travis file
 
 on: push
 
 jobs:
+     name: super code lint 
+     runs-on: ubuntu-latest
 
-super-lint:
-name: Lint code base
-runs-on: ubuntu-latest
-steps:
-- name: Checkout code
-  uses: actions/checkout@v2
-- name: Run super-lint
-  uses: github/super-linter@v4
-env:
-DEFAULT_BRANCH: main
-GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     steps:
+         - name: Runs checkout
+           uses: actions/checkout@v2
+
+         - name: Runs super-lint code
+           uses: github/super-linter@v4
+           env:
+              DEFAULT_BRANCH: main
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
